--- a/crates/bitcell-node/Cargo.toml
+++ b/crates/bitcell-node/Cargo.toml
@@ -22,6 +22,9 @@ serde.workspace = true
 thiserror.workspace = true
 tokio = { version = "1", features = ["full"] }
 clap = { version = "4", features = ["derive"] }
+rand = "0.8"
+bincode = "1.3"
+parking_lot = "0.12"
 
 [dev-dependencies]
 proptest.workspace = true
