--- a/crates/bitcell-node/Cargo.toml
+++ b/crates/bitcell-node/Cargo.toml
@@ -25,6 +25,8 @@ clap = { version = "4", features = ["derive"] }
 rand = "0.8"
 bincode = "1.3"
 parking_lot = "0.12"
+libp2p = { version = "0.53", features = ["kad", "tcp", "noise", "yamux", "identify", "dns", "macros"] }
+futures = "0.3"
 
 [dev-dependencies]
 proptest.workspace = true
