feat: Implement MII+ tournament system with adaptive strategy
- Phase 1: Add deterministic entropy to battles (spawn jitter, noise, energy fluctuations)
- Phase 2: Implement MII+ tiebreaker system (MII, TED, Lexicographic)
- Phase 3: Integrate single-elimination tournament with finals detection and history tracking
- Phase 4: Add adaptive strategy layer with behavioral feature extraction and reputation feedback
- Phase 5: Create adversarial simulation lab with miner archetypes for testing

New Components:
- BattleHistory struct for tracking grid states and energy deltas
- TournamentMatch struct for storing comprehensive match records
- MinerBehaviour and TournamentMetrics for adaptive strategy
- bitcell-simulation crate with HonestMiner, TieFarmer, ChaosSpammer, FlakyGriefer archetypes
- SimulationEngine for running multi-epoch adversarial scenarios

All phases tested and verified with unit and integration tests.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ members = [
     "crates/bitcell-economics",
     "crates/bitcell-network",
     "crates/bitcell-node",
-    "crates/bitcell-admin",
+    "crates/bitcell-admin", "crates/bitcell-simulation",
 ]
 resolver = "2"
 
