--- a/crates/bitcell-node/Cargo.toml
+++ b/crates/bitcell-node/Cargo.toml
@@ -17,6 +17,7 @@ bitcell-ca = { path = "../bitcell-ca" }
 bitcell-consensus = { path = "../bitcell-consensus" }
 bitcell-state = { path = "../bitcell-state" }
 bitcell-network = { path = "../bitcell-network" }
+bitcell-economics = { path = "../bitcell-economics" }
 bitcell-ebsl = { path = "../bitcell-ebsl" }
 serde.workspace = true
 thiserror.workspace = true
@@ -27,6 +28,14 @@ bincode = "1.3"
 parking_lot = "0.12"
 libp2p = { version = "0.53", features = ["kad", "tcp", "noise", "yamux", "identify", "dns", "macros"] }
 futures = "0.3"
+axum = { version = "0.7", features = ["ws", "macros"] }
+tower = { version = "0.4", features = ["util"] }
+tower-http = { version = "0.5", features = ["cors", "trace"] }
+serde_json = "1.0"
+tracing = "0.1"
+hex = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
+base64 = "0.21"
 
 [dev-dependencies]
 proptest.workspace = true
