Revert "feat: implement block rewards, economic constants, and wallet improve…"

--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   benchmark:
     name: Run Benchmarks
-    runs-on: ubuntu-latest-xl
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       
