--- a/crates/bitcell-wallet-gui/Cargo.toml
+++ b/crates/bitcell-wallet-gui/Cargo.toml
@@ -37,9 +37,8 @@ tracing-subscriber = { workspace = true }
 
 # UI Extras
 qrcodegen = "1.8"
-
-# Hex encoding
-hex = "0.4"
+image = { version = "0.24", default-features = false, features = ["png"] }
+slint-build = "1.9"
 
 [build-dependencies]
 slint-build = "1.9"
